@@ -1,5 +1,8 @@
 main
 ====
+mainteinance: enabled text-index integration tests on Astra
+maintenance: introduced the publish-and-release workflow machinery
+maintenance: split development/maintenance from user README
 maintenance. Improvement in testing machinery:
     - Simplified keyspace management in testing.
     - Made keyspace names fully optional in all cases (typically one can forget about them).
